# mcp-ade-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_ade_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_extraction.py  structured_extraction.py
tests/: test_mcp_ade_server.py
