[project]
name = "mcp-ade-server"
version = "1.0.0"
description = "MCP server for LandingAI's Agentic Document Extraction (ADE)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MCP ADE Server Contributors"}
]
keywords = ["mcp", "document-extraction", "landingai", "ade", "ai", "vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentic-doc>=0.3.1",
    "mcp>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/avaxia8/mcp-ade-server"
"Bug Reports" = "https://github.com/avaxia8/mcp-ade-server/issues"
"Source" = "https://github.com/avaxia8/mcp-ade-server"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
mcp-ade-server = "mcp_ade_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mcp_ade_server --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
